--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         </nav>
     </header>
     <main>
-        <h1>Page Title Goes Here</h1>
-        <h3>Subtitle goes underneath</h3>
+        <h1>Tom Forman-Kenrick</h1>
+        <h3>Fontend Developer</h3>
         <section>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat error maiores inventore. Similique voluptate aperiam, tenetur quam architecto neque repellendus. Architecto nostrum adipisci eius eaque placeat quod, blanditiis maiores sit?</p>
+            <button>Button 1</button>
+            <button>Button 2</button>
         </section>
     </main>
     <footer>
