--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
         <nav>
             <ul>
-            <li><a href="#">Item 1</a></li>
-            <li><a href="#">Item 2</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
             <li><a href="#">Item 3</a></li>
-            <li><a href="#">Item 4</a></li>
+            <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
