initial button styling

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h3>Fontend Developer</h3>
         <section>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat error maiores inventore. Similique voluptate aperiam, tenetur quam architecto neque repellendus. Architecto nostrum adipisci eius eaque placeat quod, blanditiis maiores sit?</p>
-            <button>Button 1</button>
-            <button>Button 2</button>
+            <button class="btn main__button-colored">Projects</button>
+            <button class="btn main__button-white">Connect</button>
         </section>
     </main>
     <footer>
