added gradient ot button background

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <button class="btn main__button-colored">Projects</button>
             <button class="btn main__button-white">Connect</button>
         </section>
+        <section class="projects">
+            <h2>Projects</h2>
+            <article></article>
+        </section>
     </main>
     <footer>
         <h2>Connect:</h2>
