added project placeholders, started project grid + figcaption layout

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Projects</a></li>
+            <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
             <li><a href="#">Item 3</a></li>
             <li><a href="#">Contact</a></li>
             </ul>
@@ -31,7 +32,29 @@
         </section>
         <section class="projects">
             <h2>Projects</h2>
-            <article></article>
+            <div class="projects__wrapper">
+            <figure>
+                <img src="./imgs/placeholder_img.jpg" alt="" />
+                <figcaption>
+                    <h2>Project Title</h2>
+                    <p>Info about the project</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./imgs/placeholder_img.jpg" alt="" />
+                <figcaption>
+                    <h2>Project Title</h2>
+                    <p>Info about the project</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./imgs/placeholder_img.jpg" alt="" />
+                <figcaption>
+                    <h2>Project Title</h2>
+                    <p>Info about the project</p>
+                </figcaption>
+            </figure>
+        </div>
         </section>
     </main>
     <footer>
