Tweaked nav link titles and figcaption text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
         <nav>
             <ul>
-            <li><a href="#">About</a></li>
             <li><a href="#">Projects</a></li>
+            <li><a href="#">Music</a></li>
             <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
-            <li><a href="#">Item 3</a></li>
+            <li><a href="#">Education</a></li>
             <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -36,22 +36,22 @@
             <figure>
                 <img src="./imgs/placeholder_img.jpg" alt="" />
                 <figcaption>
-                    <h2>Project Title</h2>
-                    <p>Info about the project</p>
+                    <h2>The Random Key Generator</h2>
+                    <p>Music practice tools</p>
                 </figcaption>
             </figure>
             <figure>
                 <img src="./imgs/placeholder_img.jpg" alt="" />
                 <figcaption>
-                    <h2>Project Title</h2>
-                    <p>Info about the project</p>
+                    <h2>North Surrey Families</h2>
+                    <p>Family-focused blog page</p>
                 </figcaption>
             </figure>
             <figure>
                 <img src="./imgs/placeholder_img.jpg" alt="" />
                 <figcaption>
-                    <h2>Project Title</h2>
-                    <p>Info about the project</p>
+                    <h2>Slow Grown Farm</h2>
+                    <p>Landing page and store</p>
                 </figcaption>
             </figure>
         </div>
