added fa icons to footer and footer a11y markdown

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Rubik:wght@300;400;600&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/3bddb0bb72.js" crossorigin="anonymous"></script>
     <title>Tom F-K</title>
 </head>
 <body>
+    <!-- header/nav -->
     <header>
         <div class="logo__container">
             <img src="" alt="" class="header__logo">
@@ -22,6 +24,7 @@
             </ul>
         </nav>
     </header>
+    <!-- hero main section -->
     <main>
         <h1>Tom Forman-Kenrick</h1>
         <h3>Fontend Developer</h3>
@@ -30,6 +33,7 @@
             <button class="btn main__button-colored">Projects</button>
             <button class="btn main__button-white">Connect</button>
         </section>
+        <!-- projects grid section -->
         <section class="projects">
             <h2>Projects</h2>
             <div class="projects__wrapper">
@@ -57,13 +61,35 @@
         </div>
         </section>
     </main>
+    <!-- footer -->
     <footer>
         <h2>Connect:</h2>
         <ul>
-            <li>Github</li>
-            <li>LinkedIn</li>
-            <li>Discord</li>
-            <li>Instagram</li>
+            <li>
+                <a href="https://github.com/TomF-K" target="_blank">
+                    <span class="fa-brands fa-github" aria-hidden="true"></span>
+                    <span class="sr-only">Github</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/TomF-K" target="_blank">
+                    <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+                    <span class="sr-only">LinkedIn</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/TomF-K" target="_blank">
+                    <span class="fa-brands fa-discord" aria-hidden="true"></span>
+                    <span class="sr-only">Discord</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com/tommykrizzle" target="_blank">
+                    <span class="fa-brands fa-instagram" aria-hidden="true"></span>
+                    <span class="sr-only">Instagram</span>
+                </a>
+            </li>
+            
         </ul>
     </footer>
 </body>
