footer styling: fixed icon positioning and footer padding

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     </main>
     <!-- footer -->
     <footer>
-        <h2>Connect:</h2>
+        <h2>Connect</h2>
+        <div class="icon__container">
         <ul>
             <li>
                 <a href="https://github.com/TomF-K" target="_blank">
@@ -89,8 +90,8 @@
                     <span class="sr-only">Instagram</span>
                 </a>
             </li>
-            
         </ul>
+    </div>
     </footer>
 </body>
 </html>
