fixed footer h2 color

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Tom Forman-Kenrick</h1>
         <h3>Fontend Developer</h3>
         <section>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat error maiores inventore. Similique voluptate aperiam, tenetur quam architecto neque repellendus. Architecto nostrum adipisci eius eaque placeat quod, blanditiis maiores sit?</p>
+            <p>Clean, accessible, responsive designs.</p>
             <button class="btn main__button-colored">Projects</button>
             <button class="btn main__button-white">Connect</button>
         </section>
