added education.html with initial markdown

--- a/education.html
+++ b/education.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Rubik:wght@300;400;600&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/3bddb0bb72.js" crossorigin="anonymous"></script>
-    <title>Tom F-K</title>
+    <title>Education - TFK</title>
 </head>
 <body>
     <!-- header/nav -->
@@ -16,50 +16,16 @@
         </div>
         <nav>
             <ul>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#">Projects</a></li>
             <li><a href="#">Music</a></li>
             <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
-            <li><a href="./education.html">Education</a></li>
+            <li><a href="#">Education</a></li>
             <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <!-- hero main section -->
     <main>
-        <h1>Tom Forman-Kenrick</h1>
-        <h3>Fontend Developer</h3>
-        <section>
-            <p>Clean, accessible, responsive designs.</p>
-            <button class="btn main__button-colored">Projects</button>
-            <button class="btn main__button-white">Connect</button>
-        </section>
-        <!-- projects grid section -->
-        <section class="projects">
-            <h2>Projects</h2>
-            <div class="projects__wrapper" id="projects">
-            <figure>
-                <img src="./imgs/placeholder_img.jpg" alt="" />
-                <figcaption>
-                    <h2>The Random Key Generator</h2>
-                    <p>Music practice tools</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="./imgs/placeholder_img.jpg" alt="" />
-                <figcaption>
-                    <h2>North Surrey Families</h2>
-                    <p>Family-focused blog page</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="./imgs/placeholder_img.jpg" alt="" />
-                <figcaption>
-                    <h2>Slow Grown Farm</h2>
-                    <p>Landing page and store</p>
-                </figcaption>
-            </figure>
-        </div>
-        </section>
+
     </main>
     <!-- footer -->
     <footer>
