added logo link on education.html

--- a/education.html
+++ b/education.html
@@ -18,7 +18,7 @@
             <ul>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Music</a></li>
-            <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
+            <li><a href="./index.html" alt="click to return to the homepage"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></a></li>
             <li><a href="#">Education</a></li>
             <li><a href="#">Contact</a></li>
             </ul>
