text alignment for section h2

--- a/education.html
+++ b/education.html
@@ -25,7 +25,9 @@
         </nav>
     </header>
     <main>
-
+<section class="student__testimonials">
+    <h2>What my students are saying</h2>
+</section>
     </main>
     <!-- footer -->
     <footer>
