updated todo.txt list

--- a/education.html
+++ b/education.html
@@ -20,17 +20,18 @@
             <li><a href="#">Music</a></li>
             <li><a href="./index.html" alt="click to return to the homepage"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></a></li>
             <li><a href="#">Education</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
 <section class="student__testimonials">
+    <p>One of the upshots of the COVID pandemic was that it forced me to take my music teaching online and allowed me to connect with people across the globe.</p>
     <h2>What my students are saying</h2>
 </section>
     </main>
     <!-- footer -->
-    <footer>
+    <footer id="contact">
         <h2>Connect</h2>
         <div class="icon__container">
         <ul>
