--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#">Music</a></li>
             <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
             <li><a href="./education.html">Education</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -62,7 +62,7 @@
         </section>
     </main>
     <!-- footer -->
-    <footer>
+    <footer id="contact">
         <h2>Connect</h2>
         <div class="icon__container">
         <ul>
