added markdown for testimonials section

--- a/education.html
+++ b/education.html
@@ -25,9 +25,35 @@
         </nav>
     </header>
     <main>
-<section class="student__testimonials">
+<section class="testimonials">
     <p>One of the upshots of the COVID pandemic was that it forced me to take my music teaching online and allowed me to connect with people across the globe.</p>
     <h2>What my students are saying</h2>
+    <!-- testimonial block -->
+    <article class="testimonials__container">
+        <div class="testimonials__img-container">
+          <img
+            src="./person-1.jpeg"
+            id="person-img"
+            alt="headshot of a dark haired woman with glasses smiling at the camera with blurry traffic in the background"
+          />
+        </div>
+        <h4 id="testimonials__author">Sara Jones</h4>
+        <p id="testimonials__job">UX designer</p>
+        <p id="testimonials__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos omnis
+          quo vel quaerat magni, fugiat voluptate voluptatum harum deleniti
+          tenetur deserunt esse nobis rem sunt iure nesciunt facere ipsum!
+          Sed.
+        </p>
+        <!-- prev/next buttons -->
+        <div class="testimonials__button-container">
+          <button class="prev-btn">
+            <span class="fa fa-chevron-left"></span>
+          </button>
+          <button class="next-btn">
+            <span class="fa fa-chevron-right"></span>
+          </button>
+        </div>
 </section>
     </main>
     <!-- footer -->
