--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Tom Forman-Kenrick</h1>
         <h3>Fontend Developer</h3>
         <section>
-            <p>Clean, accessible, responsive designs.</p>
+            <p>Clean, accessible, responsive design.</p>
             <button class="btn main__button-colored">Projects</button>
             <button class="btn main__button-white">Connect</button>
         </section>
