--- a/education.html
+++ b/education.html
@@ -32,13 +32,13 @@
     <article class="testimonials__container">
         <div class="testimonials__img-container">
           <img
-            src="./person-1.jpeg"
-            id="person-img"
-            alt="headshot of a dark haired woman with glasses smiling at the camera with blurry traffic in the background"
+            src="./imgs/SB_profile.jpg"
+            id="student-img"
+            alt="black and white picture of a man playing bass guitar wearing a suit, hat, and sunglasses"
           />
         </div>
-        <h4 id="testimonials__author">Sara Jones</h4>
-        <p id="testimonials__job">UX designer</p>
+        <h4 id="testimonials__author">Stew B.</h4>
+        <p id="testimonials__location">Somerset, UK</p>
         <p id="testimonials__text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos omnis
           quo vel quaerat magni, fugiat voluptate voluptatum harum deleniti
