--- a/education.html
+++ b/education.html
@@ -12,7 +12,7 @@
     <!-- header/nav -->
     <header>
         <div class="logo__container">
-            <img src="" alt="" class="header__logo">
+            <img src="" alt="website logo" class="header__logo">
         </div>
         <nav>
             <ul>
