fixed figcaption positioning

--- a/education.html
+++ b/education.html
@@ -11,9 +11,6 @@
 <body>
     <!-- header/nav -->
     <header>
-        <div class="logo__container">
-            <img src="" alt="website logo" class="header__logo">
-        </div>
         <nav>
             <ul>
             <li><a href="#">Projects</a></li>
@@ -37,8 +34,8 @@
             alt="black and white picture of a man playing bass guitar wearing a suit, hat, and sunglasses"
           />
         </div>
-        <h4 id="testimonials__author">Stew B.</h4>
-        <p id="testimonials__location">Somerset, UK</p>
+        <h3 id="testimonials__author">Stew B.</h3>
+        <h4 id="testimonials__location">Somerset, UK</h4>
         <p id="testimonials__text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos omnis
           quo vel quaerat magni, fugiat voluptate voluptatum harum deleniti
