refined padding and text alignment on projects

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <figure>
                 <img src="./imgs/placeholder_img.jpg" alt="" />
                 <figcaption>
-                    <h2>Slow Grown Farm</h2>
-                    <p>Landing page and store</p>
+                    <h2>Leaving Card</h2>
+                    <p>Responsive grid gallery</p>
                 </figcaption>
             </figure>
         </div>
