added FBT random key files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section>
             <p>Clean, accessible, responsive design.</p>
             <button class="btn main__button-colored">Projects</button>
-            <button class="btn main__button-white">Connect</button>
+            <button class="btn main__button-white"><a href="#contact">Connect</a></button>
         </section>
         <!-- projects grid section -->
         <section class="projects">
