--- a/Projects/FBT/index_FBT.html
+++ b/Projects/FBT/index_FBT.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Inspiration&family=Martel+Sans:wght@200;300;400;600&family=Montserrat:wght@300;400;500;600;700&family=Tangerine:wght@700&display=swap"
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./FBT_styles.css" />
   </head>
   <body data-new-gr-c-s-check-loaded="8.905.0" data-gr-ext-installed="">
     <!-- header/nav -->
@@ -17,7 +17,7 @@
         <a href="#"
           ><img
             class="header__logo-img"
-            src="img/Logo transparent background.png"
+            src="./img/Logo transparent background.png"
             alt="free bass transcriptions logo"
         /></a>
       </div>
@@ -49,7 +49,7 @@
       </p>
     </footer>
     <!-- javascript -->
-    <script type="text/javascript" src="/app.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
   </body>
   <grammarly-desktop-integration
     data-grammarly-shadow-root="true"
