fixed figcaption a layout, added box shsadow

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <h2>Projects</h2>
             <div class="projects__wrapper" id="projects">
             <figure>
-                <img src="./imgs/placeholder_img.jpg" alt="" />
+                <a href="Projects/FBT/index_FBT.html">
+                <img src="./imgs/Randomkey_preview.png" alt="" />
+            </a>
                 <figcaption>
                     <h2>The Random Key Generator</h2>
                     <p>Music practice tools</p>
