updated figcaption markdown with a tags

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="projects__wrapper" id="projects">
             <figure>
                 <a href="Projects/FBT/index_FBT.html">
-                <img src="./imgs/Randomkey_preview.png" alt="" />
+                <img src="./imgs/Randomkey_preview.png" alt="random key generator for music practice" />
             </a>
                 <figcaption>
                     <h2>The Random Key Generator</h2>
@@ -44,14 +44,18 @@
                 </figcaption>
             </figure>
             <figure>
-                <img src="./imgs/placeholder_img.jpg" alt="" />
+                <a href="Projects/FBT/index_FBT.html">
+                    <img src="./imgs/Randomkey_preview.png" alt="" />
+                </a>
                 <figcaption>
                     <h2>North Surrey Families</h2>
                     <p>Family-focused blog page</p>
                 </figcaption>
             </figure>
             <figure>
-                <img src="./imgs/placeholder_img.jpg" alt="" />
+                <a href="Projects/FBT/index_FBT.html">
+                    <img src="./imgs/Randomkey_preview.png" alt="" />
+                </a>
                 <figcaption>
                     <h2>Leaving Card</h2>
                     <p>Responsive grid gallery</p>
