removed projects button and restyled connect btn

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h3>Fontend Developer</h3>
         <section>
             <p>Clean, accessible, responsive design.</p>
-            <button class="btn main__button-colored">Projects</button>
-            <button class="btn main__button-white"><a href="#contact">Connect</a></button>
+            <button class="btn main__button-colored"><a href="#contact">Connect</a></button>
+
         </section>
         <!-- projects grid section -->
         <section class="projects">
@@ -36,7 +36,7 @@
             <div class="projects__wrapper" id="projects">
             <figure>
                 <a href="Projects/FBT/index_FBT.html">
-                <img src="./imgs/Randomkey_preview.png" alt="random key generator for music practice" />
+                <img src="./imgs/Randomkey_preview.png" alt="random key generator for music" />
             </a>
                 <figcaption>
                     <h2>The Random Key Generator</h2>
