added music imgs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#">Music</a></li>
+            <li><a href="./music.html">Music</a></li>
             <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
             <li><a href="./education.html">Education</a></li>
             <li><a href="#contact">Contact</a></li>
