--- a/education.html
+++ b/education.html
@@ -13,17 +13,21 @@
     <header>
         <nav>
             <ul>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Music</a></li>
+            <li><a href="./index.html#projects">Projects</a></li>
+            <li><a href="./music.html">Music</a></li>
             <li><a href="./index.html" alt="click to return to the homepage"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></a></li>
             <li><a href="#">Education</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-<section class="testimonials">
-    <p>One of the upshots of the COVID pandemic was that it forced me to take my music teaching online and allowed me to connect with people across the globe.</p>
+    <main class="testimonials__main">
+<section class="testimonials__blurb">
+    <p>I love talking about music almost as much as I enjoy playing it, and I'm passionate about giving people the tools they need to be musically independent.</p><p> Since 2015 I've been running <a href="https://freebasstranscriptions.com/" target="_blank">Free Bass Transcriptions</a>, which offers free sheet music and lessons for bass players, along with an accompanying YouTube channel:</p> 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PKVqLOUyDIw?si=iamMTQLUQ-G15-GY&amp;controls=0&amp;start=319" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p>One of the upshots of the COVID-19 pandemic was that it forced me to start teaching online, which has allowed me to help people all over the world get closer to their musical goals.</p>
+    </section>
+    <section class="testimonials__slider">
     <h2>What my students are saying</h2>
     <!-- testimonial block -->
     <article class="testimonials__container">
