--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <!-- hero main section -->
     <main>
         <h1>Tom Forman-Kenrick</h1>
-        <h3>Fontend Developer</h3>
-        <section>
-            <p>Clean, accessible, responsive design.</p>
+        <h3>Aspiring Fontend Developer</h3>
+        <section class="personal__blurb">
+            <p>For the past 15 years I've been working as a professional musician and music teacher, performing across the UK and Europe and working with students of all ages and abilities. </p>
+            <p>Since becoming a dad my priorities have shifted; I want a career which allows me to spend more time at home and has a more consistent schedule than being a performing musician. That's where web development comes in.</p>
             <button class="btn main__button-colored"><a href="#contact">Connect</a></button>
 
         </section>
