fixed h1 and links on education page

--- a/education.html
+++ b/education.html
@@ -21,7 +21,10 @@
             </ul>
         </nav>
     </header>
+    <!-- education intro text -->
+    
     <main class="testimonials__main">
+        <h1>Education</h1>
 <section class="testimonials__blurb">
     <p>I love talking about music almost as much as I enjoy playing it, and I'm passionate about giving people the tools they need to be musically independent.</p><p> Since 2015 I've been running <a href="https://freebasstranscriptions.com/" target="_blank">Free Bass Transcriptions</a>, which offers free sheet music and lessons for bass players, along with an accompanying YouTube channel:</p> 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/PKVqLOUyDIw?si=iamMTQLUQ-G15-GY&amp;controls=0&amp;start=319" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
