music grid styling

--- a/music.html
+++ b/music.html
@@ -27,15 +27,16 @@
 <!-- Music img grid -->
 <section class="music__grid-wrapper">
 <div class="music__grid-img portrait"><img src="./imgs/2011 10 20 Childline Rocks Jamie Abbott 2202297312.jpg"></div>
-<div class="music__grid-img youtube"><iframe width="400" height="200" src="https://www.youtube.com/embed/FLIEZuRcoZc?si=6unUOOcoi9Y8mGyP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 <div class="music__grid-img portrait"><img src="./imgs/IMG_3974.jpg"></div>
+<div class="music__grid-img youtube"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/FLIEZuRcoZc?si=6unUOOcoi9Y8mGyP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 <div class="music__grid-img landscape"><img src="./imgs/IMG_0686.JPG"></div>
 <div class="music__grid-img square"><img src="./imgs/IMG_4817.jpg"></div>
-<div class="music__grid-img youtube"><iframe width="400" height="200" src="https://www.youtube.com/embed/QowgkMgsj2M?si=CWdb3sB_Dv6XrRVl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img youtube"><iframe width="400" height="200" src="https://www.youtube.com/embed/jQESzfkgSBw?si=TGZjNC3Zy5pFiSIh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img youtube"><iframe width="400" height="200" src="https://www.youtube.com/embed/iRbzgW-4pvE?si=uRezAIU7cHkB_El9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<div class="music__grid-img youtube centered"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/QowgkMgsj2M?si=CWdb3sB_Dv6XrRVl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<div class="music__grid-img square"><img src="./imgs/IMG_4817.jpg"></div>
+<div class="music__grid-img youtube centered"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/jQESzfkgSBw?si=TGZjNC3Zy5pFiSIh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<div class="music__grid-img youtube centered"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/iRbzgW-4pvE?si=uRezAIU7cHkB_El9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 <div class="music__grid-img portait"><img src="./imgs/jm-3-6x9.jpg"></div>
-<div class="music__grid-img landscape"><img src="./imgs/IMG_8575.JPG"></div>
+<div class="music__grid-img landscape centered"><img src="./imgs/IMG_8575.JPG"></div>
 <div class="music__grid-img square"><img src="./imgs/Tom Kenrick.jpg"></div>
     </section>
 </main>
