added nav__toggle button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <!-- header/nav -->
     <header>
+        <button class="nav__toggle"><i class="fas fa-bars"></i></button>
         <nav>
-            <ul>
+            <ul class="links">
             <li><a href="#projects">Projects</a></li>
             <li><a href="./music.html">Music</a></li>
             <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
