fixed show__links styling

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
         <button class="nav__toggle"><i class="fas fa-bars"></i></button>
         <nav>
-            <ul class="links">
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="./music.html">Music</a></li>
-            <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
-            <li><a href="./education.html">Education</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <ul class="links show__links">
+            <li class="nav__link"><a href="#projects">Projects</a></li>
+            <li class="nav__link"><a href="./music.html">Music</a></li>
+            <li class="nav__logo"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
+            <li class="nav__link"><a href="./education.html">Education</a></li>
+            <li class="nav__link"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
