--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <button class="nav__toggle"><i class="fas fa-bars"></i></button>
         <nav>
-            <ul class="links show__links">
+            <ul class="links">
             <li class="nav__link"><a href="#projects">Projects</a></li>
             <li class="nav__link"><a href="./music.html">Music</a></li>
             <li class="nav__logo"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
