--- a/music.html
+++ b/music.html
@@ -11,13 +11,14 @@
 <body>
     <!-- header/nav -->
     <header>
+        <button class="nav__toggle"><i class="fas fa-bars"></i></button>
         <nav>
-            <ul>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#">Music</a></li>
-            <li><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
-            <li><a href="./education.html">Education</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <ul class="links">
+            <li class="nav__link"><a href="#projects">Projects</a></li>
+            <li class="nav__link"><a href="./music.html">Music</a></li>
+            <li class="nav__logo"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
+            <li class="nav__link"><a href="./education.html">Education</a></li>
+            <li class="nav__link"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
