--- a/music.html
+++ b/music.html
@@ -27,18 +27,14 @@
 <p class="music__info">For the past 23 years I've been utterly obsessed by music and, in particular, the bass guitar. Here are some snapshots of my career as a performer:</p>
 <!-- Music img grid -->
 <section class="music__grid-wrapper">
-<div class="music__grid-img portrait"><img src="./imgs/2011 10 20 Childline Rocks Jamie Abbott 2202297312.jpg"></div>
-<div class="music__grid-img portrait"><img src="./imgs/IMG_3974.jpg"></div>
-<div class="music__grid-img youtube"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/FLIEZuRcoZc?si=6unUOOcoi9Y8mGyP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img landscape"><img src="./imgs/IMG_0686.JPG"></div>
-<div class="music__grid-img square"><img src="./imgs/IMG_4817.jpg"></div>
-<div class="music__grid-img youtube centered"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/QowgkMgsj2M?si=CWdb3sB_Dv6XrRVl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img square"><img src="./imgs/IMG_4817.jpg"></div>
-<div class="music__grid-img youtube centered"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/jQESzfkgSBw?si=TGZjNC3Zy5pFiSIh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img youtube centered"><iframe width="500px" height="350px" src="https://www.youtube.com/embed/iRbzgW-4pvE?si=uRezAIU7cHkB_El9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img portait"><img src="./imgs/jm-3-6x9.jpg"></div>
-<div class="music__grid-img landscape centered"><img src="./imgs/IMG_8575.JPG"></div>
-<div class="music__grid-img square"><img src="./imgs/Tom Kenrick.jpg"></div>
+<div class="music__grid-img"><img src="./imgs/2011 10 20 Childline Rocks Jamie Abbott 2202297312.jpg"></div>
+<div class="music__grid-img"><img src="./imgs/jm-3-6x9.jpg"></div>
+<div class="music__grid-img"><iframe width="560" height="315" src="https://www.youtube.com/embed/iRbzgW-4pvE?si=qA-Z4Ac4XwPx-IE-&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<div class="music__grid-img"><img src="./imgs/Tom Kenrick.jpg"></div>
+<div class="music__grid-img"><img src="./imgs/IMG_3974.jpg"></div>
+<div class="music__grid-img"><iframe width="560" height="315" src="https://www.youtube.com/embed/FLIEZuRcoZc?si=cx2x7xzLPUbhEdHs&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+
+
     </section>
 </main>
      <!-- footer -->
