further updates to music grid

--- a/music.html
+++ b/music.html
@@ -24,7 +24,7 @@
     </header>
 <main class="music__info">
 <h1>Music</h1>
-<p class="music__info">For the past 23 years I've been utterly obsessed by music and, in particular, the bass guitar. Here are some snapshots of my career as a performer:</p>
+<p class="music__info-blurb">For the past 23 years I've been utterly obsessed by music and, in particular, the bass guitar. Here are some snapshots of my career as a performer:</p>
 <!-- Music img grid -->
 <section class="music__grid-wrapper">
 <div class="music__grid-img"><img src="./imgs/2011 10 20 Childline Rocks Jamie Abbott 2202297312.jpg"></div>
@@ -33,6 +33,9 @@
 <div class="music__grid-img"><img src="./imgs/Tom Kenrick.jpg"></div>
 <div class="music__grid-img"><img src="./imgs/IMG_3974.jpg"></div>
 <div class="music__grid-img"><iframe width="560" height="315" src="https://www.youtube.com/embed/FLIEZuRcoZc?si=cx2x7xzLPUbhEdHs&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<div class="music__grid-img"><img src="./imgs/IMG_0686.JPG"></div>
+<div class="music__grid-img"><img src="./imgs/RH4.jpg"></div>
+<div class="music__grid-img"><iframe width="560" height="315" src="https://www.youtube.com/embed/jQESzfkgSBw?si=sj1RZkaIfolLUOO3&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 
     </section>
