added alt tags for music imgs

--- a/music.html
+++ b/music.html
@@ -27,14 +27,14 @@
 <p class="music__info-blurb">For the past 23 years I've been utterly obsessed by music and, in particular, the bass guitar. Here are some snapshots of my career as a performer:</p>
 <!-- Music img grid -->
 <section class="music__grid-wrapper">
-<div class="music__grid-img"><img src="./imgs/2011 10 20 Childline Rocks Jamie Abbott 2202297312.jpg"></div>
-<div class="music__grid-img"><img src="./imgs/jm-3-6x9.jpg"></div>
+<div class="music__grid-img"><img src="./imgs/2011 10 20 Childline Rocks Jamie Abbott 2202297312.jpg" alt="man playing bass guitar on stage with dark background"></div>
+<div class="music__grid-img"><img src="./imgs/jm-3-6x9.jpg" alt="blakc and white close up of singer and bassist seated on stage"></div>
 <div class="music__grid-img"><iframe width="560" height="315" src="https://www.youtube.com/embed/iRbzgW-4pvE?si=qA-Z4Ac4XwPx-IE-&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img"><img src="./imgs/Tom Kenrick.jpg"></div>
-<div class="music__grid-img"><img src="./imgs/IMG_3974.jpg"></div>
+<div class="music__grid-img"><img src="./imgs/Tom Kenrick.jpg" alt="close up image of man wearing headphones playing bass guitar in a recording studio"></div>
+<div class="music__grid-img"><img src="./imgs/IMG_3974.jpg" alt="close up image of a man playing an orange bass guitar on stage"></div>
 <div class="music__grid-img"><iframe width="560" height="315" src="https://www.youtube.com/embed/FLIEZuRcoZc?si=cx2x7xzLPUbhEdHs&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="music__grid-img"><img src="./imgs/IMG_0686.JPG"></div>
-<div class="music__grid-img"><img src="./imgs/RH4.jpg"></div>
+<div class="music__grid-img"><img src="./imgs/IMG_0686.JPG" alt="a young man with questionable sideburns playing bass guitar onstage"></div>
+<div class="music__grid-img"><img src="./imgs/RH4.jpg" alt="band performing to an audience with colse up of the bassist"></div>
 <div class="music__grid-img"><iframe width="560" height="315" src="https://www.youtube.com/embed/jQESzfkgSBw?si=sj1RZkaIfolLUOO3&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 
