--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="links">
             <li class="nav__link"><a href="#projects">Projects</a></li>
             <li class="nav__link"><a href="./music.html">Music</a></li>
-            <li class="nav__logo"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
+            <li class="nav__logo"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" alt="Website logo. Click to return to the homepage." /></li>
             <li class="nav__link"><a href="./education.html">Education</a></li>
             <li class="nav__link"><a href="#contact">Contact</a></li>
             </ul>
