--- a/music.html
+++ b/music.html
@@ -14,9 +14,9 @@
         <button class="nav__toggle"><i class="fas fa-bars"></i></button>
         <nav>
             <ul class="links">
-            <li class="nav__link"><a href="#projects">Projects</a></li>
+            <li class="nav__link"><a href="./index.html#projects">Projects</a></li>
             <li class="nav__link"><a href="./music.html">Music</a></li>
-            <li class="nav__logo"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" /></li>
+            <li class="nav__logo"><a href="index.html"><img src="./imgs/TFK_logo_icon.png" class="logo__img-full" alt="Website logo. Click to return to the homepage." /></a></li>
             <li class="nav__link"><a href="./education.html">Education</a></li>
             <li class="nav__link"><a href="#contact">Contact</a></li>
             </ul>
