updated student testimonial text

--- a/education.html
+++ b/education.html
@@ -29,7 +29,7 @@
 <section class="testimonials__blurb">
     <p>I love talking about music almost as much as I enjoy playing it, and I'm passionate about giving people the tools they need to be musically independent.</p><p> Since 2015 I've been running <a href="https://freebasstranscriptions.com/" target="_blank">Free Bass Transcriptions</a>, which offers free sheet music and lessons for bass players, along with an accompanying YouTube channel:</p> 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/PKVqLOUyDIw?si=iamMTQLUQ-G15-GY&amp;controls=0&amp;start=319" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <p>One of the upshots of the COVID-19 pandemic was that it forced me to start teaching online, which has allowed me to help people all over the world get closer to their musical goals.</p>
+    <p>One of the upshots of the COVID-19 pandemic was that it forced me to start teaching online, which has allowed me to help people all over the world get closer to their musical goals. Take a look below to see feedback from some of my students:</p>
     </section>
     <section class="testimonials__slider">
     <h2>What my students are saying</h2>
@@ -38,6 +38,7 @@
         <div class="testimonials__img-container">
           <img
             src="./imgs/SB_profile.jpg"
+            class="student__img-top"
             id="student-img"
             alt="black and white picture of a man playing bass guitar wearing a suit, hat, and sunglasses"
           />
