--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="projects__wrapper" id="projects">
             <figure>
                 <a href="Projects/FBT/index_FBT.html">
-                <img src="./imgs/Randomkey_preview.png" alt="random key generator for music" />
+                <img src="./imgs/Randomkey_preview.png" alt="random key generator for music practice" />
             </a>
                 <figcaption>
                     <h2>The Random Key Generator</h2>
@@ -56,7 +56,7 @@
             </figure>
             <figure>
                 <a href="Projects/FBT/index_FBT.html">
-                    <img src="./imgs/Randomkey_preview.png" alt="" />
+                    <img src="imgs/leavingcard_preview.png" alt="greeting card photo gallery" />
                 </a>
                 <figcaption>
                     <h2>Leaving Card</h2>
