linked leaving card index and styles to homepage

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </figcaption>
             </figure>
             <figure>
-                <a href="Projects/FBT/index_FBT.html">
+                <a href="Projects/Leaving Card/leavingcard_index.html">
                     <img src="imgs/leavingcard_preview.png" alt="greeting card photo gallery" />
                 </a>
                 <figcaption>
