removed nsf project, styled project grid, added hover state

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
         <!-- projects grid section -->
         <section class="projects">
-            <h2>Projects</h2>
+            <h2>Sample Projects</h2>
             <div class="projects__wrapper" id="projects">
             <figure>
                 <a href="Projects/FBT/index_FBT.html">
@@ -43,15 +43,6 @@
                 <figcaption>
                     <h2>The Random Key Generator</h2>
                     <p>Music practice tools</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <a href="Projects/FBT/index_FBT.html">
-                    <img src="./imgs/Randomkey_preview.png" alt="" />
-                </a>
-                <figcaption>
-                    <h2>North Surrey Families</h2>
-                    <p>Family-focused blog page</p>
                 </figcaption>
             </figure>
             <figure>
