--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://github.com/TomF-K" target="_blank">
+                <a href="https://linkedin.com/in/tomkenrick/" target="_blank">
                     <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
                     <span class="sr-only">LinkedIn</span>
                 </a>
