updated discord links

--- a/education.html
+++ b/education.html
@@ -80,7 +80,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://github.com/TomF-K" target="_blank">
+                <a href="https://discordapp.com/users/t.f_k" target="_blank">
                     <span class="fa-brands fa-discord" aria-hidden="true"></span>
                     <span class="sr-only">Discord</span>
                 </a>
