--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
         <h1>Education</h1>
 <section class="testimonials__blurb">
     <p>I love talking about music almost as much as I enjoy playing it, and I'm passionate about giving people the tools they need to be musically independent.</p><p> Since 2015 I've been running <a href="https://freebasstranscriptions.com/" target="_blank">Free Bass Transcriptions</a>, which offers free sheet music and lessons for bass players, along with an accompanying YouTube channel:</p> 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/PKVqLOUyDIw?si=iamMTQLUQ-G15-GY&amp;controls=0&amp;start=319" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PKVqLOUyDIw?si=iamMTQLUQ-G15-GY&amp;controls=0&amp;start=319" title="15-minute bass guitar triad workout" scrolling="auto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <p>One of the upshots of the COVID-19 pandemic was that it forced me to start teaching online, which has allowed me to help people all over the world get closer to their musical goals. Take a look below to see feedback from some of my students:</p>
     </section>
     <section class="testimonials__slider">
