--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     <!-- hero main section -->
     <main>
         <h1>Tom Forman-Kenrick</h1>
-        <h3>Aspiring Fontend Developer</h3>
+        <h3>Fontend Developer</h3>
         <section class="personal__blurb">
+            <p>I'm Tom, a frontend developer creating responsive, accessible sites using HTML, CSS and JavaScript.</p>
             <p>For the past 15 years I've been working as a professional musician and music teacher, performing across the UK and Europe and working with students of all ages and abilities. </p>
             <p>Since becoming a parent my priorities have shifted; I want a career which allows me to spend more time at home and has a more consistent schedule than being a performing musician. That's where web development comes in.</p>
-            <p>Over the past year I've been working through courses on Free Code Camp, <a href="https://frontendmasters.com/u/TF_K/" target="_blank">Frontend Masters</a>, The Odin Project and CS50 to improve my frontend development skills. This site showcases some of what I've learned about responsive design, you can view the Github repo <a href="https://github.com/TomF-K/FAC-personal-website" target="_blank">here.</a> </p>
+            <p>Over the past two years I've been working through courses including Harvard's CS50, Free Code Camp, <a href="https://frontendmasters.com/u/TF_K/" target="_blank">Frontend Masters</a>, and The Odin Project to improve my frontend development skills. This site showcases some of what I've learned about responsive design, you can view the Github repo <a href="https://github.com/TomF-K/FAC-personal-website" target="_blank">here.</a> </p>
             <button class="btn main__button-colored"><a href="#contact">Connect</a></button>
 
         </section>
