--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     <!-- hero main section -->
     <main>
         <h1>Tom Forman-Kenrick</h1>
-        <h3>Aspiring Fontend Developer</h3>
+        <h3>Fontend Developer</h3>
         <section class="personal__blurb">
-            <p>For the past 15 years I've been working as a professional musician and music teacher, performing across the UK and Europe and working with students of all ages and abilities. </p>
-            <p>Since becoming a parent my priorities have shifted; I want a career which allows me to spend more time at home and has a more consistent schedule than being a performing musician. That's where web development comes in.</p>
-            <p>Over the past year I've been working through courses on Free Code Camp, <a href="https://frontendmasters.com/u/TF_K/" target="_blank">Frontend Masters</a>, The Odin Project and CS50 to improve my frontend development skills. This site showcases some of what I've learned about responsive design, you can view the Github repo <a href="https://github.com/TomF-K/FAC-personal-website" target="_blank">here.</a> </p>
+            <p>I'm Tom, a frontend developer creating responsive, accessible sites using HTML, CSS and JavaScript/React.</p>
+            <p>Over the past two years I've been working through courses including Harvard's CS50, <a href="https://frontendmasters.com/u/TF_K/" target="_blank">Frontend Masters</a>, and The Odin Project to improve my frontend development skills. This site showcases some of what I've learned about responsive design, you can view the Github repo <a href="https://github.com/TomF-K/FAC-personal-website" target="_blank">here.</a> </p>
             <button class="btn main__button-colored"><a href="#contact">Connect</a></button>
 
         </section>
@@ -37,6 +36,15 @@
         <section class="projects">
             <h2>Sample Projects</h2>
             <div class="projects__wrapper" id="projects">
+            <figure>
+                <a href="https://tomf-k.github.io/react-whats_for_dinner">
+                <img src="./imgs/whats_for_dinner_screenshot.png" alt="What's for dinner recipe app" />
+                </a>
+                <figcaption>
+                    <h2>What's for Dinner?</h2>
+                    <p>React/Vite API fetch project</p>
+                </figcaption>
+            </figure>
             <figure>
                 <a href="Projects/FBT/index_FBT.html">
                 <img src="./imgs/Randomkey_preview.png" alt="random key generator for music practice" />
