--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
     <!-- hero main section -->
     <main>
         <h1>Tom Forman-Kenrick</h1>
-        <h3>Fontend Developer</h3>
-        <h3>Fontend Developer</h3>
+        <h3>Frontend Developer</h3>
         <section class="personal__blurb">
             <p>I'm Tom, a frontend developer creating responsive, accessible sites using HTML, CSS and JavaScript/React.</p>
             <p>Over the past two years I've been working through courses including Harvard's CS50, <a href="https://frontendmasters.com/u/TF_K/" target="_blank">Frontend Masters</a>, and The Odin Project to improve my frontend development skills. This site showcases some of what I've learned about responsive design, you can view the Github repo <a href="https://github.com/TomF-K/FAC-personal-website" target="_blank">here.</a> </p>
             <button class="btn main__button-colored"><a href="#contact">Connect</a></button>
-
         </section>
         <!-- projects grid section -->
         <section class="projects">
